<resources>
    <string name="app_name">ADEB User</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="are_you_a_new_user">Are you a new user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="by_clicking_here_you_agree_to_the_terms_and_conditions">By Clicking here you agree to the <u> Terms and Conditions</u></string>
    <string name="register">Register</string>
    <string name="already_a_user">Already a user?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now">Now</string>
    <string name="day">Day</string>
    <string name="hourly">Hourly</string>
    <string name="regular">Regular</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="me">Me</string>
    <string name="payment_method">Payment Method</string>
    <string name="my_booking">My Booking</string>
    <string name="book">Book</string>
    <string name="no_data_found">No Data Found</string>
    <string name="edit_your_profile_details">Edit your profile details</string>
    <string name="my_account_panel">Please drop us a mail mentioning the panel you
    would like us to complain about. we will take an action and get back to you asap.
    </string>
    <string name="show_notificatons">Notifications</string>
    <string name="choose_your_car_and_gear_type">Choose your car and gear type?</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="luxury">Luxury</string>
    <string name="manual">Manual</string>
    <string name="automatic">Automatic</string>
    <string name="coupons">Coupons</string>
    <string name="mode_of_payment">Mode of Payment</string>
    <string name="book_now">Book Now</string>
    <string name="select_time">Select Time</string>
    <string name="pick_up">Pick Up</string>
    <string name="time">Time</string>
    <string name="continue_">Continue</string>
    <string name="favorite">Favorite</string>
    <string name="automatically">Automatically</string>
    <string name="you_will_receive_a_otp_on_the_registered_mobile_number">You will receive a OTP on the registered mobile number.</string>
    <string name="enter_the_registered_mobile_number">Enter the registered mobile number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="you_have_successfully_change_your_password_please_visit_the_login_page_to_use_this_app">You have successfully change your password.Please visit the login page to use this app</string>
    <string name="password_match_error">Passwords are not matching</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="confirm_password_error">Confirm Password cannot be empty</string>
    <string name="mobile_error">Mobile Number cannot be empty</string>
    <string name="name_error">Name cannot be empty</string>
    <string name="email_empty_error">Email cannot be empty</string>
    <string name="invalid_email_error">Invalid email</string>
    <string name="logout_confirm_message">Are you sure want to logout of \nyour account?</string>
    <string name="privacy_policy_validation">Please select our terms of use policy</string>
    <string name="logout">Logout</string>
    <string name="call_driver">Call Driver</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="dismiss">Dismiss</string>
    <string name="select_action">Select Action</string>
    <string name="select_image_from_gallery">Select image from gallery</string>
    <string name="select_image_from_camera">Select image from camera</string>
    <string name="nice_experience">Nice Experience !</string>
    <string name="rate_driver">Rate Driver</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favourite_drivers">Favourite Drivers</string>
    <string name="your_favourite_drivers">Your Favourite Drivers</string>
    <string name="settings">Settings</string>
    <string name="change_your_account_settings">Change your account settings</string>
    <string name="support">Support</string>
    <string name="ready_to_help_you_24_7">Ready to help you 24*7</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="rate_our_app">Rate our app</string>
    <string name="type_your_views">Type your views</string>
    <string name="rate">Rate</string>
    <string name="save">Save</string>
    <string name="mobile">Mobile</string>
    <string name="request_otp">Request OTP</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="enter_the_4_digit_code_sent_to_you">Enter the 4-digit code sent to you</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="verify">Verify</string>
    <string name="change_password">Change Password</string>
    <string name="login">Login</string>
    <string name="ride_option">Ride Option</string>
    <string name="my_account">My Account</string>
    <string name="fee_payment">Fee payment</string>
    <string name="safety">Safety</string>
    <string name="ride_passes_and_subscriptions">Ride passes and subscriptions</string>
    <string name="all_about_adeb_services">All about ADEB services</string>
    <string name="choose_the_driver">Choose the driver</string>

    <string name="select_a_time_period">Select a time period</string>
    <string name="select_manually">Select Manually</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="title">Title</string>
    <string name="my_bookings">My Bookings</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="cash">Cash</string>
    <string name="debit_credit_card">Debit/Credit Card</string>

    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>
    <string name="favorite_rider">Favourite Rider</string>
    <string name="destination_error">Please add destination to continue</string>
    <string name="pick_up_error">Please add pickup time to continue</string>
    <string name="channel_id">" com.example.adebuser"</string>
    <string name="ride_start_notification">You are on your way</string>
    <string name="add_review_message">Your Ride is completed, would you like to give driver a rating?</string>
    <string name="searching_driver">Searching for your driver</string>
    <string name="driver_on_way">Driver is on the way</string>
    <string name="cancel_booking_alert">Are you sure you want to cancel the booking?</string>
</resources>
