<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_height="150dp"/>


    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/drawable_editext"
android:layout_marginTop="30dp"
        android:paddingStart="10dp"
android:paddingEnd="10dp"
        android:paddingTop="12dp"
        android:fontFamily="@font/poppins"
        android:elevation="3dp"
        android:textColor="@color/text_blue"
        android:textColorHint="@color/text_blue"
        android:paddingBottom="12dp"
        android:imeOptions="actionNext"
        android:hint="@string/mobile_number"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/drawable_editext"
        android:layout_marginTop="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="12dp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:elevation="3dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/text_blue"
        android:textColorHint="@color/text_blue"
        android:paddingBottom="12dp"
        android:hint="@string/password"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/forgot_password"
        android:textColor="@color/text_grey" />


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/log_in"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        android:background="@drawable/drawable_gradient"
        android:layout_height="wrap_content"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins"
        android:id="@+id/tv"
        android:text="@string/are_you_a_new_user"
        android:textColor="@color/text_grey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:layout_toEndOf="@+id/tv"
            android:text="@string/sign_up"

            android:layout_marginStart="10dp"
            android:textColor="@color/black" />


    </RelativeLayout>


</androidx.appcompat.widget.LinearLayoutCompat>