<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignUpActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="30dp">


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/ediitext_drawable"
            android:elevation="3dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/name"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="@dimen/_10sdp"
            android:imeOptions="actionNext"
            android:paddingStart="10dp"
            android:paddingTop="12dp"
            android:paddingEnd="10dp"
            android:paddingBottom="12dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/light_blue" />


        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/ediitext_drawable"
            android:elevation="3dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/mobile_number"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/_10sdp"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingTop="12dp"
            android:paddingEnd="10dp"
            android:paddingBottom="12dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/light_blue" />


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/ediitext_drawable"
            android:elevation="3dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="@dimen/_10sdp"
            android:imeOptions="actionNext"
            android:paddingStart="10dp"
            android:paddingTop="12dp"
            android:paddingEnd="10dp"
            android:paddingBottom="12dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/light_blue" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
           android:background="@drawable/ediitext_drawable"
            android:elevation="3dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/_10sdp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingTop="12dp"
            android:paddingEnd="10dp"
            android:paddingBottom="12dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/light_blue" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/text_blue"
                android:gravity="center"
                android:textColor="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/cb"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/by_clicking_here_you_agree_to_the_terms_and_conditions"
                android:textColor="@color/text_blue" />
        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/drawable_gradient"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/register"
            android:onClick="onClick"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:text="@string/already_a_user"
                android:textColor="@color/text_grey" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/tv"
                android:fontFamily="@font/poppins"
                android:onClick="onClick"

                android:text="@string/log_in"
                android:textColor="@color/black" />


        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_bg" />

</RelativeLayout>