<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.me.favourite_rider.FavouriteRiderActivity">


    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="5dp"
        app:theme="@style/ThemeOverlay.AppCompat.Light">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_icon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins"
            android:text="@string/my_bookings"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/_14ssp" />


    </RelativeLayout>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_time_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:weightSum="4">


        <TextView
            android:id="@+id/tv_now"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/now"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/light_blue" />


        <TextView
            android:id="@+id/tv_day"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/day"
            android:textSize="@dimen/_12ssp"
            android:textAllCaps="false"
         />


        <TextView
            android:id="@+id/tv_regular"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/regular"
            android:textSize="@dimen/_12ssp"
            android:textAllCaps="false"
           />


        <TextView
            android:id="@+id/tv_hourly"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/hourly"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
           />

    </androidx.appcompat.widget.LinearLayoutCompat>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        >


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_my_booking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/rv_my_booking" />

        <TextView
            android:id="@+id/tv_empty_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/no_data_found"
            android:textSize="@dimen/_16ssp"
            android:visibility="gone" />
    </RelativeLayout>


</androidx.appcompat.widget.LinearLayoutCompat>