<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="@dimen/_150sdp"
    android:background="@drawable/drawable_upper_white_curve"
    android:orientation="vertical"
    tools:context=".ui.book_ride.select_time.SelectTimeFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="5dp"
        android:background="@drawable/drawable_upper_white_curve"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
android:text="@string/select_time"
android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"

            />

        <ImageView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:src="@drawable/ic_arrow_down"/>

    </RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/_25sdp"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:text="@string/pick_up"
        android:layout_marginStart="@dimen/_15sdp"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:layout_centerVertical="true"
        android:textColor="@color/blue"
        android:layout_height="wrap_content"

        />

    <EditText
        android:layout_width="@dimen/_100sdp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textSize="14sp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_alignParentEnd="true"
        android:hint="@string/time"
        android:drawableEnd="@drawable/ic_clock"
        android:fontFamily="@font/poppins"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_grey_editext"
        />

</RelativeLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/continue_"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:fontFamily="@font/poppins"
        android:background="@drawable/drawable_gradient"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>