<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layoutDescription="@xml/motion_scene_splash"
    tools:context=".ui.auth.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >




    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />



        <!--drawable_editext-->
        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/ediitext_drawable"


            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/_10sdp"
            android:elevation="3dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/mobile_number"
            android:imeOptions="actionNext"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="10dp"
            android:paddingBottom="12dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/light_blue" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/ediitext_drawable"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/_10sdp"
            android:elevation="3dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="10dp"
            android:paddingBottom="12dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/light_blue" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="onClick"
            android:text="@string/forgot_password"
            android:textColor="@color/text_grey" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/drawable_gradient"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="onClick"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:text="@string/are_you_a_new_user"
                android:textColor="@color/text_grey" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/tv"
                android:fontFamily="@font/poppins"
                android:onClick="onClick"

                android:text="@string/sign_up"
                android:textColor="@color/black" />


        </RelativeLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_bg" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>